# compile-time-perf

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
cmake/Modules/: Utilities.cmake
cmake/Templates/: compile-time-perf-config.cmake.in
source/: compile-time-perf-analyzer.py  compile-time-perf.cpp
